geoint-demo/k8s/cis-examples/afm-ingresslink.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geoint-nginx-afm
  namespace: geoint-demo
spec:
  ingressClassName: nginx
  rules:
    - host: geoint-afm.f5demos.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: rag-api-service
                port:
                  number: 8000
