geoint-demo/k8s/cis-examples/asm-ingresslink.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geoint-cis-asm
  namespace: geoint-demo
  annotations:
    kubernetes.io/ingress.class: f5
    cert-manager.io/cluster-issuer: "lab-ca-issuer"
    virtual-server.f5.com/partition: "Common"
    virtual-server.f5.com/balance: "least-connections-member"
    # BIG-IP ASM policy (WAF)
    virtual-server.f5.com/waf: "/Common/geoint-asm-policy"
spec:
  ingressClassName: f5
  tls:
    - hosts:
        - geoint-asm.f5demos.com
      secretName: geoint-asm-f5demos-com-tls
  rules:
    - host: geoint-asm.f5demos.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /geoserver
            pathType: Prefix
            backend:
              service:
                name: geoserver-service
                port:
                  number: 8080
