geoint-demo/k8s/cis-examples/asm-nodeport-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geoint-cis-asm
  namespace: geoint-demo
  annotations:
    # CIS watches this class and creates BIG-IP LTM objects
    kubernetes.io/ingress.class: f5
    # BIG-IP virtual server address (replace for your lab)
    virtual-server.f5.com/ip: "10.1.10.111"
    virtual-server.f5.com/partition: "Common"
    virtual-server.f5.com/balance: "least-connections-member"
    # BIG-IP ASM policy (WAF)
    virtual-server.f5.com/waf: "/Common/geoint-asm-policy"
spec:
  ingressClassName: f5
  rules:
    - host: geoint-asm.demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /geoserver
            pathType: Prefix
            backend:
              service:
                name: geoserver-service
                port:
                  number: 8080
