geoint-demo/k8s/cis-examples/ltm-ingresslink.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geoint-nginx-ltm
  namespace: geoint-demo
spec:
  ingressClassName: nginx
  rules:
    - host: geoint-ltm.demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
