geoint-demo/k8s/cis-examples/ltm-nodeport-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geoint-cis-ltm
  namespace: geoint-demo
  annotations:
    # CIS watches this class and creates BIG-IP LTM objects
    kubernetes.io/ingress.class: f5
    # BIG-IP virtual server address (replace for your lab)
    virtual-server.f5.com/ip: "10.1.10.110"
    virtual-server.f5.com/partition: "Common"
    virtual-server.f5.com/balance: "round-robin"
spec:
  ingressClassName: f5
  rules:
    - host: geoint-ltm.demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
